# cpp-control-freak

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  QuestionsAndAnswers.md  README.md  main.cpp  setup_vcpkg.sh
.circleci/: config.yml
Components/: logger.cpp  logger.hpp  notifier.cpp
src/: CMakeLists.txt  calculator.cpp  calculator.cpp~  calculator.hpp  logger.cpp  notifier.cpp  notifier.hpp  notifier_test.cpp
src/include/calculator/: calculator.hpp
src/include/notifier/: notifier.hpp
tests/: CMakeLists.txt  calc_test.cpp  e2e_test.cpp  integ_test.cpp  logger_test.cpp  notifier_test.cpp  test_dummy.cpp
